<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="March"
                android:textColor="@color/white"
                android:textSize="@dimen/h1"
                android:textStyle="bold"
                tools:textColor="@color/colorAccent" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_20_dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="@dimen/common_20_dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/common_3_dp"
                android:orientation="vertical"
                android:paddingStart="6dp"
                android:paddingTop="@dimen/common_10_dp"
                android:paddingEnd="6dp"
                android:paddingBottom="@dimen/common_10_dp">

                <!--
                android:layout_marginStart="@dimen/common_20_dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="@dimen/common_20_dp"
                android:layout_marginBottom="10dp"-->

                <LinearLayout
                    android:id="@+id/llDayList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="7">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sunday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/monday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tuesday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wednesday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thursday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/friday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/saturday_text"
                        android:textColor="@color/calendar_month_text"
                        android:textSize="@dimen/h5" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gvCurrentMonthDayList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:isScrollContainer="false"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="7"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    android:visibility="visible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:padding="8dp"
            android:id="@+id/ivPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:elevation="@dimen/common_4_dp"
            android:src="@drawable/ic_arrow_left" />


        <ImageView
            android:padding="8dp"
            android:id="@+id/ivNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:elevation="@dimen/common_4_dp"
            android:src="@drawable/ic_arrow_right" />

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/wakeup_rounded_button"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/completedTaskTextV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_wakeup_text"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="2 / 6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sections Completed"
                android:textColor="@color/color_wakeup_text"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:src="@drawable/ic_tick" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/wakeup_rounded_button"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/completedDaysTextV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_wakeup_text"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="3 Days" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Completed"
                android:textColor="@color/color_wakeup_text"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:src="@drawable/ic_fire" />

    </RelativeLayout>

</LinearLayout>